--- a/lenguaje-programacion/PlanTelefonia/nbproject/project.properties
+++ b/lenguaje-programacion/PlanTelefonia/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PlanTelefonia
 excludes=
 file.reference.sqlite-jdbc-3.36.0.3.jar=C:\\Users\\USER\\Desktop\\Instaladores\\sqlite-jdbc-3.36.0.3.jar
+file.reference.sqlite-jdbc-3.36.0.3.jar-1=C:\\Users\\cbena\\Desktop\\POO\\2Bi\\clase06-2bim-JhandrySolorzano\\EjemploBD\\lib\\sqlite-jdbc-3.36.0.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.36.0.3.jar}
+    ${file.reference.sqlite-jdbc-3.36.0.3.jar}:\
+    ${file.reference.sqlite-jdbc-3.36.0.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
